Fix for login-screen too small glitch

--- a/src/app/login-screen/login-screen.component.scss
+++ b/src/app/login-screen/login-screen.component.scss
@@ -16,6 +16,7 @@ div.login-screen {
 
   div.login-box {
     height: calc(100% - 230px);
+    min-height: 370px;
     padding-bottom: 200px;
     box-sizing: border-box;
     width: 100%;
